<resources>
    <string name="app_name">ZWallet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_login">Login</string>
    <string name="text_signup">Sign Up</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_login_desc">Login to your existing account to access all the features in Zwallet</string>
    <string name="text_register_desc">Create your account to access Zwallet.</string>
    <string name="text_reset_desc">Enter your Zwallet e-mail so we can send you a password reset link.</string>
    <string name="text_reset_password_desc">Create and confirm your new password so you can login to Zwallet.</string>
    <string name="hint_email">Enter your e-mail</string>
    <string name="hint_username">Enter your username</string>
    <string name="hint_password">Enter your password</string>

    <string name="create_password">Create your password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_have_account">Don’t have an account?</string>
    <string name="text_alreadyhave_account">Already have an account?</string>

    <string name="topup_desc">We provide you virtual account number for top up via nearest ATM.</string>
    <string name="fisrt_step_topup_desc">Go to the nearest ATM or you can use E-Banking.</string>
    <string name="second_step_topup_desc">Type your security number on the ATM or E-Banking.</string>
    <string name="third_step_topup_desc">Select “Transfer” in the menu</string>
    <string name="fourth_step_topup_desc">Type the virtual account number that we provide you at the top.</string>
    <string name="fifth_step_topup_desc">Type the amount of the money you want to top up.</string>
    <string name="sixth_step_topup_desc">Read the summary details</string>
    <string name="seventh_step_topup_desc">Press transfer / top up</string>
    <string name="eighth_step_topup_desc">You can see your money in Zwallet within 3 hours.</string>


    <string name="personal_desc">We got your personal information from the sign up process. If you want to make changes on yout information contact our support.</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_verified_email">Verified E-mail</string>
    <string name="text_phone_number">Phone Number</string>

    <string name="text_otp_desc">We have sent your OTP (One Time Password) code via Email</string>

    <string name="text_create_pin">Create Security PIN</string>
    <string name="text_create_pin_desc">Create a PIN that’s contain 6 digits number for security purpose in Zwallet.</string>
    <string name="text_pin_success">PIN Successfully Created</string>
    <string name="text_pin_success_desc">Your PIN was successfully created and you can now access all the features in Zwallet. Login to your new account and start exploring!</string>
    <string name="text_pin_failed_desc">We can’t transfer your money at the moment, we recommend you to check your internet connection and try again.</string>

    <string name="text_change_pin_desc">Enter your current 6 digits Zwallet PIN below to continue to the next steps.</string>
    <string name="text_new_pin_desc">Type your new 6 digits security PIN to use in Zwallet.</string>
    <string name="text_enter_pin_desc">Enter your 6 digits PIN for confirmation to continue transferring money.</string>

    <string name="text_change_password_desc">You must enter your current passsword and then type your new password twice.</string>
    <string name="text_add_phone">Add at least one phone number for the transfer ID so you can start transfering your money to another user.</string>
    <string name="text_manage_phone">You can only delete the phone number and then you must add another phone number.</string>
</resources>